@@ -1,3 +1,11 @@
+2011-03-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/makefile.win32, src/main.c, src/Makefile.am, configure.ac,
+   wscript:
+   Initialize GLib's Gthread system early at startup in case any
+   plugins need it.
+
+
 2011-03-27  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * plugins/splitwindow.c:
